[gd_scene load_steps=6 format=3 uid="uid://dry4o5rpga2ec"]

[ext_resource type="Script" uid="uid://cu06jcpwigm47" path="res://start_screen.gd" id="1_ncxyx"]

[sub_resource type="Animation" id="Animation_afy8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ncxyx"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.27451)]
}

[sub_resource type="Animation" id="Animation_pevhg"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.27451), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afy8x"]
_data = {
&"RESET": SubResource("Animation_afy8x"),
&"fade_in": SubResource("Animation_ncxyx"),
&"fade_out": SubResource("Animation_pevhg")
}

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_ncxyx")

[node name="FadeRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="ObjectiveLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartAsAxisButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start as Axis"

[node name="StartAsAlliesButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start as Allies"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../FadeRect")
libraries = {
&"": SubResource("AnimationLibrary_afy8x")
}
